force-app/main/default/objects/Credit_limit_data__c/Credit_limit_data__c.object-meta.xml
<CustomObject>
    <description>Custome object to give access from the object account to the object Supplier/Buyer Map</description>
    <label>Credit Limit Data / Map</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Limit Data /Map</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>