force-app/main/default/objects/Credit_limit_data__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Main master relation ship account</description>
    <inlineHelpText>Buyer Account</inlineHelpText>
    <label>Account Buyer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Limit Data /Map</relationshipLabel>
    <relationshipName>Bridge_Account_Maps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>