force-app/main/default/objects/Credit_limit_data__c/fields/Buyer_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Account_Name__c</fullName>
    <label>Buyer Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>