force-app/main/default/objects/Credit_limit_data__c/fields/Buyer_Map__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Map__c</fullName>
    <formula>Supplier_Buyer_Map__r.Buyer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Map</label>
    <type>Text</type>
</CustomField>