force-app/main/default/objects/Credit_limit_data__c/fields/Cost_Insurance_customer__c.field-meta.xml
<CustomField>
    <fullName>Cost_Insurance_customer__c</fullName>
    <description>Cost insurance for the Customer %</description>
    <inlineHelpText>Cost insurance for the Customer %</inlineHelpText>
    <label>Cost Insurance for the customer</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>