force-app/main/default/objects/Credit_limit_data__c/fields/Credit_Limit_Available__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Available__c</fullName>
    <description>Credit Limit Available for this Map</description>
    <formula>(Credit_Limit_Incomlend__c *90)/100 - Supplier_Buyer_Map__r.Funded_amount_in_progress_prelisting__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated</inlineHelpText>
    <label>Credit Limit Available for This Map</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>