force-app/main/default/objects/Credit_limit_data__c/fields/Credit_Limit_Avalaible_2__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Avalaible_2__c</fullName>
    <label>Credit Limit Avalaible for this Map_</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>