force-app/main/default/objects/Credit_limit_data__c/fields/Credit_Limit_Incomlend__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Incomlend__c</fullName>
    <description>Credit Limit imposed by Incomlend</description>
    <inlineHelpText>Credit Limit imposed by Incomlend</inlineHelpText>
    <label>Credit Limit Incomlend for this Map</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>