force-app/main/default/objects/Credit_limit_data__c/fields/Credit_Limit_requested__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_requested__c</fullName>
    <description>Credit Limit requested</description>
    <inlineHelpText>Credit Limit  Requested for this map, given by the customer or deciced by Incomlend</inlineHelpText>
    <label>Credit Limit requested for this Map</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>