force-app/main/default/objects/Credit_limit_data__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>Currency from Map</description>
    <formula>Supplier_Buyer_Map__r.Currency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Currency from Map</inlineHelpText>
    <label>Currency</label>
    <type>Text</type>
</CustomField>