force-app/main/default/objects/Credit_limit_data__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date of the Credit Limit</description>
    <inlineHelpText>End date of the Credit Limit</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>