force-app/main/default/objects/Credit_limit_data__c/fields/Insurance_Police_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Police_Number__c</fullName>
    <externalId>true</externalId>
    <label>Insurance Police Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>