force-app/main/default/objects/Credit_limit_data__c/fields/Insurer_Name__c.field-meta.xml
<CustomField>
    <fullName>Insurer_Name__c</fullName>
    <description>Insurer Name</description>
    <inlineHelpText>Insurer Name</inlineHelpText>
    <label>Insurer Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>