force-app/main/default/objects/Credit_limit_data__c/fields/Map_Supplier_Buyer_ID__c.field-meta.xml
<CustomField>
    <fullName>Map_Supplier_Buyer_ID__c</fullName>
    <formula>Supplier_buye_Map__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map Supplier Buyer ID</label>
    <type>Text</type>
</CustomField>