force-app/main/default/objects/Credit_limit_data__c/fields/Special_Insurance_Note__c.field-meta.xml
<CustomField>
    <fullName>Special_Insurance_Note__c</fullName>
    <label>Special Insurance Note</label>
    <type>TextArea</type>
</CustomField>