force-app/main/default/objects/Credit_limit_data__c/fields/Starting_Date__c.field-meta.xml
<CustomField>
    <fullName>Starting_Date__c</fullName>
    <description>Starting date of the Credit Limit</description>
    <inlineHelpText>Starting date of the Credit limit</inlineHelpText>
    <label>Starting Date</label>
    <type>Date</type>
</CustomField>