force-app/main/default/objects/Credit_limit_data__c/fields/Supplier_buye_Map__c.field-meta.xml
<CustomField>
    <fullName>Supplier_buye_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Buyer Map</label>
    <referenceTo>Supplier_Buyer_Map__c</referenceTo>
    <relationshipName>Bridge_Account_Maps1</relationshipName>
    <type>Lookup</type>
</CustomField>