force-app/main/default/objects/Credit_limit_data__c/fields/Supplier_Map__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Map__c</fullName>
    <formula>Supplier_Buyer_Map__r.Supplier__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Map</label>
    <type>Text</type>
</CustomField>