force-app/main/default/objects/Credit_limit_data__c/fields/Total_Credit_Limit_Available__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit_Limit_Available__c</fullName>
    <description>Total Credit Limit Incomlend requested by buyer (Sum of all  CL Incomlend by Map)</description>
    <formula>Account__r.Total_Credit_Limit_Incomlend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Credit Limit Incomlend requested by buyer (Sum of all  CL Incomlend by Map)</inlineHelpText>
    <label>Total Credit Limit Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>