force-app/main/default/objects/Credit_limit_data__c/fields/Total_Credit_Limit_Incomlend__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit_Limit_Incomlend__c</fullName>
    <description>Total Credit limit requested for the buyer (sum of all CL requested by Map)</description>
    <formula>Account__r.Total_Credit_Limit_Incomlend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Credit limit requested for the buyer (sum of all CL requested by Map)</inlineHelpText>
    <label>Total Credit Limit Incomlend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>