force-app/main/default/objects/Credit_limit_data__c/fields/Total_Credit_Limit_Incomlend_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit_Limit_Incomlend_Buyer__c</fullName>
    <description>General Credit Limit  of this buyer imposed by Incomlend</description>
    <formula>Account__r.Total_CL_Limit_from_Incomlend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>General Credit Limit  of this buyer imposed by Incomlend</inlineHelpText>
    <label>General Credit Limit Incomlend Buyer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>