force-app/main/default/objects/Credit_limit_data__c/fields/Total_Credit_Limit_Requested__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit_Limit_Requested__c</fullName>
    <description>Total Credit limit requested  for this Buyer (for All Map)</description>
    <formula>Account__r.Total_Credit_Limit_Requested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Credit limit requested  for this Buyer (for All Map)</inlineHelpText>
    <label>Total Credit Limit Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>