force-app/main/default/objects/Credit_limit_data__c/fields/Total_Funded_Amount_In_pro_prelist__c.field-meta.xml
<CustomField>
    <fullName>Total_Funded_Amount_In_pro_prelist__c</fullName>
    <formula>Supplier_Buyer_Map__r.Funded_amount_in_progress_prelisting__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Funded Amount inprogress&amp;prelistin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>