force-app/main/default/objects/Credit_limit_data__c/fields/Total_invoice_in_progess__c.field-meta.xml
<CustomField>
    <fullName>Total_invoice_in_progess__c</fullName>
    <formula>Supplier_Buyer_Map__r.total_invoice_value_in_progress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total invoice in progess</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>