force-app/main/default/objects/Credit_limit_data__c/fields/USD_FX__c.field-meta.xml
<CustomField>
    <fullName>USD_FX__c</fullName>
    <description>Rate from Supplier Buyer map for USD equiv calculation on buyer</description>
    <formula>Supplier_buye_Map__r.Marketplace__r.Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rate from Supplier Buyer map for USD equiv calculation on buyer</inlineHelpText>
    <label>USD FX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>