force-app/main/default/objects/Credit_limit_data__c/validationRules/Maximum_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Maximum_required</fullName>
    <active>true</active>
    <errorConditionFormula>(Credit_Limit_requested__c  +    Supplier_buye_Map__r.Funded_amount_in_progress_prelisting__c ) &lt;=  Account__r.Total_CL_Limit_from_Incomlend__c</errorConditionFormula>
    <errorDisplayField>Credit_Limit_requested__c</errorDisplayField>
    <errorMessage>The limit credit available for this map is too small, choose a lower value</errorMessage>
</ValidationRule>